--- a/index.html
+++ b/index.html
@@ -1,125 +1,11 @@
-<!-- <!DOCTYPE html>
-<style>
-
-.states :hover {
-  fill: red;
-}
-
-.state-borders {
-  fill: none;
-  stroke: #fff;
-  stroke-width: 0.5px;
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  pointer-events: none;
-}
-
-</style>
-<svg width="960" height="600"></svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="https://d3js.org/topojson.v2.min.js"></script>
-<script>
-
-var svg = d3.select("svg");
-
-var path = d3.geoPath();
-
-d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
-  if (error) throw error;
-
-  svg.append("g")
-      .attr("class", "states")
-    .selectAll("path")
-    .data(topojson.feature(us, us.objects.states).features)
-    .enter().append("path")
-      .attr("d", path);
-
-  svg.append("path")
-      .attr("class", "state-borders")
-      .attr("d", path(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; })));
-});
-
-</script>
-
- -->
-
-
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
 
-.background {
-  fill: none;
-  pointer-events: all;
-}
-
-.feature {
-  fill: Honeydew;
-  cursor: pointer;
-}
-
-.feature.active {
-  fill: PaleGreen;
-}
-
-.mesh {
-  fill: none;
-  stroke: #fff;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-}
-.states-names{
-	font-size: xx-small;
-	pointer-events: none;
-}
-.hidden {
-      display: none;
-    }
-
-    div.tooltip {
-			position: absolute;
-			text-align: center;
-			width: 90px;
-			height: 32px;
-			padding: 1px;
-			font-size: 12px;
-			color: white;
-			font-family: 'Droid Sans', sans-serif;
-			background: black;
-			border: 1px;
-			border-radius: 6px;
-			pointer-events: none;
-			opacity: 0.6;
-		}
-
-.xaxis path,
-		.xaxis line, 
-		.yaxis path,
-		.yaxis line {
-		  fill: none;
-		  stroke: #989698;
-		  stroke-width: 1;
-		  shape-rendering: crispEdges;
-		  opacity: 1;
-		}
-		.bars{
-			fill: MediumSeaGreen;
-		}
-		.bars:hover {
-			fill: orange;
-		}
-		.usMap{
-			float: left;
-			width:720px;
-			height:500px;
-		}
-		body{
-			background-color: AliceBlue;
-		}
-
-
-
-</style>
+<head>
+	<script src="https://d3js.org/d3.v3.min.js"></script>
+	<script src="https://d3js.org/topojson.v2.min.js"></script>
+	<link rel='stylesheet' href='style.css'>
+</head>
 <body>
 	<h1 style="text-decoration: underline;"><center><i>US Mass Shooting Statistics</i></center></h1>
 	<div id="usMap" class="usMap"></div>
@@ -131,8 +17,6 @@ d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
 
 		</p>
 	</div>
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://d3js.org/topojson.v2.min.js"></script>
 <script>
 
 var width = 725,
@@ -173,13 +57,6 @@ d3.json("us.json", function(error, data) {
       ids[d.name] = d.id;
     });
 
-  // g.selectAll("path")
-  //     .data(topojson.feature(data, data.objects.states).features)
-  //   .enter().append("path")
-  //     .attr("d", path)
-  //     .attr("class", "feature")
-  //     .on("click", selected);
-
   tooltip = d3.select("#usMap")
          .append("div")
          .attr("class", "tooltip hidden");
@@ -207,12 +84,8 @@ d3.json("us.json", function(error, data) {
 
       	function showTooltip(d) {
 
-   //    		var offsetL = document.getElementById('usMap').offsetLeft+10;
-			// var offsetT = document.getElementById('usMap').offsetTop+10;
       var label = names[d.id];
       var dataFlag = 0;
-   //    var mouse = d3.mouse(svg.node())
-   //      .map( function(d) { return parseInt(d); } );
    	if(dataCount[label]){
    		dataFlag = dataCount[label];
    	}
@@ -226,28 +99,8 @@ d3.json("us.json", function(error, data) {
       .attr("class", "mesh")
       .attr("d", path);
 
-  // g.append("g")
-  //     .attr("class", "states-names")
-  //     .selectAll("text")
-  //     .data(data)
-  //     .enter()
-  //     .append("svg:text")
-  //     .text(function(d){
-  //       return names[d.id];
-  //     })
-  //     .attr("x", function(d){
-  //         return path.centroid(d)[0];
-  //     })
-  //     .attr("y", function(d){
-  //         return  path.centroid(d)[1];
-  //     })
-  //     .attr("text-anchor", "middle")
-  //     .attr('fill', 'black');
-
-
 d3.csv("mass-shootings-in-america2.csv", function(error, data2) {
 
-  		// var dataset = data.filter(d => d.State = active.data().id);
   		dataCount = {};
   		var radius = {};
   		data4=data2;
@@ -261,52 +114,6 @@ d3.csv("mass-shootings-in-america2.csv", function(error, data2) {
   				radius[d.State] = 4;
   			}
   		});
-  		// Object.keys(dataCount).forEach(function(d,i) {
-  		// 	dataCount[d] = (dataCount[d]/2);
-  		// })
-  		// g.selectAll("circle")
-  		// 	.data(data)
-  		// 	.enter()
-  		// 	.append("circle")
-  		// 	.attr("cx", function(d){
-  		// 		return path.centroid(d)[0];
-  		// 	})
-  		// 	.attr("cy", function(d){
-  		// 		return path.centroid(d)[1];
-  		// 	})
-  		// 	.attr("r", 2)
-  		// 	.style("fill", "blue");
-
-        // g.selectAll("rect")
-        //    .data(data2)
-        //    .enter()
-        //    .append("rect")
-        //    .attr("x", function(d) {
-        //            return projection([d.Longitude, d.Latitude])[0];
-        //    })
-        //    .attr("y", function(d) {
-        //            return projection([d.Longitude, d.Latitude])[1];
-        //    })
-        //    .attr("width", 2.5)
-        //    .attr("height", 2.5)
-        //    .style("fill", "red")
-        //    .style("display", "none");
-        //    // .style("pointer-events", "none");
-//---------------------------------------------------------------------------------------
-        // g.selectAll("#incidentCircle")
-        //    .data(data2)
-        //    .enter()
-        //    .append("circle")
-        //    .attr("cx", function(d) {
-        //            return projection([d.Longitude, d.Latitude])[0];
-        //    })
-        //    .attr("cy", function(d) {
-        //            return projection([d.Longitude, d.Latitude])[1];
-        //    })
-        //    .attr("r", 2)
-        //    .attr("id", "incidentCircle")
-        //    .style("fill", "red");
-//---------------------------------------------------------------------------------------
 
            g.selectAll("#countCircle")
   			.data(data)
@@ -345,9 +152,6 @@ var margin = {top: 10, right: 20, bottom: 150, left: 50},
     width = 600 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
-// Parse the date / time
-var	parseDate = d3.time.format("%Y-%m").parse;
-
 var x = d3.scale.ordinal().rangeRoundBands([0, width], .05);
 
 var y = d3.scale.linear().range([height, 0]);
@@ -355,7 +159,6 @@ var y = d3.scale.linear().range([height, 0]);
 var xAxis = d3.svg.axis()
     .scale(x)
     .orient("bottom");
-    //.tickFormat(d3.time.format("%Y"));
 
 var yAxis = d3.svg.axis()
     .scale(y)
@@ -368,13 +171,6 @@ var svg = d3.select("#barGraph").append("svg")
   .append("g")
     .attr("transform", 
           "translate(" + margin.left + "," + margin.top + ")");
-
-// d3.csv("bar-data.csv", function(error, data) {
-
-//     data.forEach(function(d) {
-//         d.date = parseDate(d.date);
-//         d.value = +d.value;
-//     });
 	
 
 	selectiveData.sort(function(a,b) {
@@ -424,17 +220,8 @@ var svg = d3.select("#barGraph").append("svg")
       .append("title")
       .text(function(d){
       	return d.City +": "+d["Total Number of Victims"];
-      })
-      ;
-
-// });
+      });
 }
-
-
-  			//});
-
-  			// g.selectAll("#incidentCircle")
-  			// .style("display", "none");
 
   			g.selectAll("#incidentCircle").remove('*');
 
@@ -458,7 +245,6 @@ function selected(d) {
       y = (bounds[0][1] + bounds[1][1]) / 2,
       scale = .9 / Math.max(dx / width, dy / height),
       translate = [width / 2 - scale * x, height / 2 - scale * y];
-  //---------------------------------------------------------------------------------------------------------------
 
   d3.selectAll("#incidentCircle").remove('*');
 
@@ -483,10 +269,6 @@ function selected(d) {
 
            });
 
-  //---------------------------------------------------------------------------------------------------------------
-
-  // d3.selectAll("#incidentCircle")
-  	// .style("display", "");
   d3.selectAll("#countCircle")
   	.style("display", "none");
 
@@ -508,22 +290,6 @@ function reset() {
       .duration(750)
       .style("stroke-width", "1.5px")
       .attr("transform", "");
-
-// d3.csv("mass-shootings-in-america2.csv", function(error, data) {
-//         g.selectAll("circle")
-//            .data(data)
-//            .enter()
-//            .append("circle")
-//            .attr("cx", function(d) {
-//                    return projection([d.Longitude, d.Latitude])[0];
-//            })
-//            .attr("cy", function(d) {
-//                    return projection([d.Longitude, d.Latitude])[1];
-//            })
-//            .attr("r", 2)
-//            .style("fill", "red")
-//            .style("pointer-events", "none");
-// });
 }
 
 </script>
