--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 
 <head>
+	<title>USA Mass Shootings Report</title>
 	<script src="https://d3js.org/d3.v3.min.js"></script>
 	<script src="https://d3js.org/topojson.v2.min.js"></script>
 	<link rel='stylesheet' href='style.css'>
