--- a/index2.html
+++ b/index2.html
@@ -132,7 +132,7 @@ d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
 		</p>
 	</div>
 <script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://d3js.org/topojson.v2.min.js"></script>
+<script src="topojson.js"></script>
 <script>
 
 var width = 725,
