--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 		</p>
 	</div>
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://d3js.org/topojson.v2.min.js"></script>
+<script> require("https://d3js.org/d3.v3.min.js");></script>
+<script> require("https://d3js.org/topojson.v2.min.js");></script>
 <script>
 
 var width = 700,
